package com.sea.auspicious_sign.sync

enum class SyncStatus {
    PENDING, SUCCESS, FAILED
}